<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.theweatherapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_detailsFragment"
            app:destination="@id/detailsFragment" >
            <argument
                android:name="wind"
                app:argType="string" />
            <argument
                android:name="lon"
                app:argType="string" />
            <argument
                android:name="lat"
                app:argType="string" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/navigation_place_one"
        android:name="com.example.theweatherapp.ui.placeOne.PlaceOneFragment"
        android:label="@string/place_one"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_place_one_to_detailsFragment"
            app:destination="@id/detailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_place_two"
        android:name="com.example.theweatherapp.ui.placeTwo.PlaceTwoFragment"
        android:label="@string/place_two"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_place_two_to_detailsFragment"
            app:destination="@id/detailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_place_three"
        android:name="com.example.theweatherapp.ui.placeThree.PlaceThreeFragment"
        android:label="@string/place_three"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_place_three_to_detailsFragment"
            app:destination="@id/detailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/detailsFragment"
        android:name="com.example.theweatherapp.ui.details.DetailsFragment"
        android:label="fragment_details"
        tools:layout="@layout/fragment_details" >
        <argument
            android:name="wind"
            app:argType="string" />
    </fragment>
</navigation>